--- a/klik.html
+++ b/klik.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>o no</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./resources/css/style.css">
   </head>
   <body>
     <h1>y u klik :(</h1>
